basic pages and small view changes

--- a/resources/templates/about.html
+++ b/resources/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "shop_base.html" %}
 {% block content %}
   <p>this is the story of music_shop... work in progress</p>
 {% endblock %}
