--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -1,14 +1,12 @@
-{% extends "base.html" %}
+{% extends "shop_base.html" %}
 {% block content %}
   <div class="jumbotron">
-    <h1>Welcome to music_shop</h1>
-    <p>Time to start building your site!</p>
-    <p><a class="btn btn-primary btn-lg" href="http://luminusweb.net">Learn more &raquo;</a></p>
+    <h1>Welcome to the music shop</h1>
   </div>
 
   <div class="row">
     <div class="span12">
-    {{docs|markdown}}
+
     </div>
   </div>
 {% endblock %}
