--- a/resources/templates/shop_base.html
+++ b/resources/templates/shop_base.html
@@ -12,7 +12,7 @@
        <!-- <a class="navbar-brand" href="{{servlet-context}}/">Music shop</a>-->
         <ul class="nav navbar-nav">
             <li class="nav-item">
-                <a href="{{servlet-context}}/"
+                <a href="{{servlet-context}}/home"
                    class="nav-link{% ifequal page " home.html" %} active{%endifequal%}">
                 Home
                 </a>
