--- a/resources/templates/shop_base.html
+++ b/resources/templates/shop_base.html
@@ -23,6 +23,8 @@
                 About
                 </a>
             </li>
+            {% block header_content %}
+            {% endblock %}
         </ul>
     </div>
 </nav>
