--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -4,6 +4,13 @@
 {% style "/css/home.css" %}
 {% endblock %}
 
+{% block header_content %}
+{%if user%}
+<li class="nav-item" style="float: right"> Hello {{user}}</li>
+<li class="nav-item" style="float: right"><a href="/logout">Log out</a></li>
+{% endif %}
+{% endblock %}
+
 {% block content %}
 <div class="header"></div>
 <div class="row">
@@ -21,7 +28,9 @@
 <div class="row">
     <table id="audio-table">
         <tbody id="audio-table-body">
-        <tr><td>Loading ...</td></tr>
+        <tr>
+            <td>Loading ...</td>
+        </tr>
         </tbody>
     </table>
 
