--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -12,27 +12,31 @@
 {% endblock %}
 
 {% block content %}
-<div class="header"></div>
-<div class="row">
-    <div class="search-panel">
-        <div class="col-lg-3">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
+<div id="home-content">
+    {% csrf-field %}
+    <div class="header"></div>
+    <div class="row">
+        <div class="search-panel">
+            <div class="col-lg-3">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button">Go!</button>
                 </span>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="row">
-    <table id="audio-table">
-        <tbody id="audio-table-body">
-        <tr>
-            <td>Loading ...</td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <table id="audio-table">
+            <tbody id="audio-table-body">
+            <tr>
+                <td>Loading ...</td>
+            </tr>
+            </tbody>
+        </table>
 
+    </div>
 </div>
+
 {% endblock %}
