--- a/resources/templates/shop_base.html
+++ b/resources/templates/shop_base.html
@@ -9,7 +9,7 @@
         &#9776;
     </button>
     <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
-       <!-- <a class="navbar-brand" href="{{servlet-context}}/">Music shop</a>-->
+        <!-- <a class="navbar-brand" href="{{servlet-context}}/">Music shop</a>-->
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <a href="{{servlet-context}}/home"
@@ -18,19 +18,24 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="{{servlet-context}}/about"
-                   class="nav-link{% ifequal page " about.html" %} active{%endifequal%}">
-                About
-                </a>
-            </li>
-            <li class="nav-item">
                 <a href="{{servlet-context}}/basket"
                    class="nav-link{% ifequal page " basket.html" %} active{%endifequal%}">
                 Basket
                 </a>
             </li>
-            {% block header_content %}
-            {% endblock %}
+            <li class="nav-item">
+                <a href="{{servlet-context}}/about"
+                   class="nav-link{% ifequal page " about.html" %} active{%endifequal%}">
+                About
+                </a>
+            </li>
+
+            {%if user%}
+            <li class="nav-item" style="float: right"> Hello {{user}}</li>
+            <li class="nav-item" style="float: right"><a href="/logout">Log out</a></li>
+            {% else %}
+            <li class="nav-item" style="float: right"><a href="/login">Log in</a></li>
+            {% endif %}
         </ul>
     </div>
 </nav>
